# winter

./: .gitignore  .travis.yml  LICENSE  default.nix  wabt.nix  winter.cabal
.github/workflows/: test.yml
app/: Main.hs
src/Wasm/Binary/: Custom.hs  Decode.hs  Encode.hs  Guard.hs  LEB128.hs  Lift.hs
src/Wasm/Exec/: Eval.hs  EvalNumeric.hs
src/Wasm/Runtime/: Func.hs  Global.hs  Instance.hs  Memory.hs  Mutable.hs  Table.hs
src/Wasm/Syntax/: AST.hs  DSL.hs  Memory.hs  Ops.hs  Types.hs  Values.hs
src/Wasm/Syntax/Ops/: Float.hs  Int.hs  Kind.hs
src/Wasm/Text/: SpecTest.hs  Wast.hs  Wat2Wasm.hs  Winter.hs
src/Wasm/Util/: Float.hs  NFData.hs  Show.hs  Source.hs
test/: Main.hs  Property.hs  Spec.hs  SpecTest.hs  Unit.hs  Wat2Wasm.hs
test/wasm/: binary-module.wasm  data-offset.wasm  elem-offset.wasm  export-func-multi.wasm  export-func-named.wasm  export-func.wasm  export-global.wasm  export-memory-multi.wasm  export-table.wasm  global.wasm  import-func-no-param.wasm  import-func-type.wasm  import-func.wasm  import-global-getglobal.wasm  import-global.wasm  import-memory.wasm  import-table.wasm  memory-segment-1.wasm  memory-segment-long.wasm  memory-segment-many.wasm  memory-segment-multi-string.wasm  module-name.wasm  table-named.wasm  type-multi-param.wasm  type-no-param.wasm  type.wasm
test/wast/: memory-fill-copy.wast
